using System.Collections.Generic;

namespace BTPGameJam
{
    public static class Constants
    {
        public static class Animation
        {
            public const string WIN = "win";
            public const string IS_VERTICAL = "isVertical";
            public const string IS_PUSHED = "isPushed";
            public const string PUSH = "push";
            public const string HORIZONTAL = "horizontal";
            public const string VERTICAL = "vertical";
        }

        public static class Tags
        {
            public const string GAME_MANAGEMENT = "GameManagement";
            public const string PLAYER = "player";
            public const string KEY = "key";
            public const string PLAYER_GUIDE = "PlayerMov";
            public const string MUSIC_MANAGER = "MusicManager";
            public const string ROCK = "Rock";
        }

        public static class Movement
        {
            public const string HORIZONTAL = "Horizontal";
            public const string VERTICAL = "Vertical";
        }
    }
}


